Fixed image zoom on Segments in ContentNavigation (4751) and Search
- too wide size of segments results in black spaces in both of the thumbnails' sides

--- a/css/contentNavigation/content-navigation.less
+++ b/css/contentNavigation/content-navigation.less
@@ -65,7 +65,6 @@
 
 						img {
 							height       : auto;
-							width        : auto;
 							display 	 : block;
     						margin-left  : auto;
     						margin-right : auto;
