--- a/css/search/styles.less
+++ b/css/search/styles.less
@@ -30,7 +30,6 @@
 
 			div.sc-segment-image-container {
 				background-color : @gray-dark;
-				padding          : 0 5px;
 			}
 
 			div.sr-image-container {
